2011-04-30  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvask.c ,
 * src/spicelib/devices/hisimhv/hsmhvld.c ,
 * src/spicelib/devices/hisimhv/hsmhvmask.c ,
 * src/spicelib/devices/hisimhv/hsmhvpar.c ,
 * src/spicelib/devices/hisimhv/hsmhvpzld.c :
    warnings, use NG_IGNORE()

2011-04-30  Robert Larice
 * configure.ac :
    re-enable unused-parameter Warnings

2011-04-30  Robert Larice
 * **/*	:
    various cleanups
    - usage of cp_getvar(), receives a void* in the third arg, thus remove casts
      FIXME, this function signature is error prone
    - use NG_IGNORE()
    - casts and prototypes

2011-04-29  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
 * src/spicelib/devices/hisimhv/hsmhvset.c :
    minor bug fix (broken diagnostic printout) and swallow some warnings

2011-04-29  Robert Larice
 * src/spicelib/devices/hisimhv/hsmhvdef.h :
    hisimhv implementation, ngspice has one more slot (GENowner) in GENinstance

2011-04-29  Dietmar Warning
 * src/spicelib/devices/hisimhv/** :
 * **/*	:
     add the HiSIM_HV model vers. 1.2.1

2011-04-28  Robert Larice
 * src/frontend/inpcom.c ,
    bug fix, (#329233)
      http://sourceforge.net/tracker/?func=detail&atid=423915&aid=3292330&group_id=38962
    this fix is for
      E1 OUT 0 vol='V(IN)>1 && V(IN)>0 ? 1 : 0'

    FIXME,
      INPevaluate() should skip a trailing `unit' string

    FIXME,
      E1 OUT 0 vol='(V(IN)>1) and (V(IN)>0) ? 1 : 0'
    this is simply incorrect syntax, but shoudn't segfault.
      inp_chk_for_multi_in_vcvs()
    is much to simple minded.

2011-04-28  Robert Larice
 * src/main.c ,
 * src/frontend/com_measure2.c ,
 * src/frontend/inpcom.c ,
 * src/spicelib/analysis/noisean.c ,
 * src/spicelib/analysis/pzan.c ,
 * src/spicelib/analysis/tfanal.c ,
 * src/spicelib/devices/cpl/cplsetup.c ,
 * src/spicelib/devices/isrc/isrcacct.c ,
 * src/spicelib/devices/vsrc/vsrcacct.c :
    code cleanup, some warnings, some casts, ...

2011-04-28  Robert Larice
 * */** :