@@ -28,12 +28,12 @@ int HSMHVpzLoad(
      register CKTcircuit *ckt,
      register SPcomplex *s)
 {
-  NG_IGNORE(ckt);
-
   register HSMHVmodel *model = (HSMHVmodel*)inModel;
   register HSMHVinstance *here;
 
   int flg_nqs =0 ;
+
+  NG_IGNORE(ckt);
 
 #define dNode        0
 #define dNodePrime   1
